--- a/views/map.ejs
+++ b/views/map.ejs
@@ -84,6 +84,7 @@ kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
 
         // 그려지고 있는 선의 좌표 배열을 얻어옵니다
         var path = clickLine.getPath();
+        console.log(path);
 
         // 좌표 배열에 클릭한 위치를 추가합니다
         path.push(clickPosition);
